--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "typeRoots" : ["node_modules/@types", "src/types"],
+    "typeRoots" : ["node_modules/@types", "src/@types"],
     "target": "es5",
     "lib": [
       "dom",
@@ -21,7 +21,6 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src", "src/@types"]
+  
 }
